# emerging-solutions-toolbox

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md
.github/: dependabot.yml
framework-evalanche/: README.md  custom_metrics.py  data.py  environment.yml  home.py  results.py  setup.sql
framework-forecast-model-builder/: CONTRIBUTING.md  FORECAST_MODEL_BUILDER_DEPLOYMENT.ipynb  README.md  eda.ipynb  environment.yml  evaluation.ipynb  inference.ipynb  inference_job.ipynb  modeling.ipynb  pyproject.toml  ruff.toml
framework-forecast-model-builder/docs/: _quarto.yml  index.qmd
framework-forecast-model-builder/forecast_model_builder/: feature_engineering.py  metrics.py  transformations.py  utils.py
framework-forecast-model-builder/sample_data/: sample_foot_traffic.csv  setup_foot_traffic.sql
framework-forecast-model-builder/sample_data/mockseries/: create_fake_timeseries_data.ipynb  utilities_time_series.py
framework-forecast-model-builder/tests/: conftest.py  create_network_policy.sql  rotate_credentials.py  test_metrics.py  test_transformations.py  test_utils.py
framework-voice-of-the-customer/: README.md  TAGGING.md  app_main.py  environment.yml  install.sql  page.py  put.sql  pyproject.toml  snowflake_conn.py  template_style.py  voc.py
framework-voice-of-the-customer/tests/: test_app_starts.py
framework-zamboni/: README.md
helper-convert2iceberg/: .gitignore  README.md
helper-enable-qas-eligible-warehouses/: README.md  notebook-enable-qas-eligible-warehouses.ipynb  notebook-enable-qas-eligible-warehouses_old.ipynb  query_acc_warehouses.py
helper-iceberg-migrator/: README.md
helper-non_tasks-to-dynamic-tables/: README.md  notebook-non_tasks-to-dynamic-tables.ipynb
helper-prompt-template-runner/: README.md  prompt_parser.py  prompt_template.yaml  register.sql
helper-secure-views-to-dynamic-tables/: CODEOWNERS  README.md  secured_views_to_dynamic_tables.ipynb
helper-serverless-task-migration/: README.md  environment.yml  serverless_task_migration.ipynb  serverless_task_migration.py
helper-share-iceberger-helper/: README.md  manifest.yml  (+2 more)
sfguide-build-contracts-chatbot-using-documentai-cortex-search-in-snowflake/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
sfguide-build-contracts-chatbot-using-documentai-cortex-search-in-snowflake/app/: app.py  environment.yml  snowflake.yml
sfguide-build-contracts-chatbot-using-documentai-cortex-search-in-snowflake/app/pages/: show_pdf.py
sfguide-build-contracts-chatbot-using-documentai-cortex-search-in-snowflake/sfguide_build_contracts_chatbot_using_documentai_cortex_search_in_snowflake/: pdf_chatbot_demo.py
(+206 files in other folders)
