[project]
name = "sln-voice-of-the-customer"
version = "0.1.0"
description = "Use Snowflake's Cortex Functions to handle the summarization, categorization, translation, and sentiment analysis of large text objects."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "snowflake-snowpark-python[pandas]>=1.30.0",
    "snowflake>=1.2.0",
    "langdetect>=1.0.9",
    "streamlit>=1.45.0",
    "pyarrow<20",
]

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "ipykernel>=6.29.5",
    "ipython>=9.1.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.4",
    "uv>=0.7.3",
]
